# examples

./: README.md
active-directory/: .gitignore  main.tf  terraform.tfvars_example  variables.tf
active-directory/powershell/: bootstrap.ps1  deploy-domaincontroller.ps1  deploy-forestroot.ps1
ai/stt_client/: Dockerfile  README.md  continious_test.json  continious_test.s16le-ac1-ar8000.raw  stt_runner.py
datasphere/: speech-recognition.ipybn  speech-recognition.ipynb  stt_metrics-0.12-py3-none-any.whl
datasphere/data/: development_set_enroll.txt  development_set_test.txt
hpc-on-preemptible/: task.c
iot/c#/: Program.cs  README.md  YaClient.cs  dev.pfx  reg.pfx
iot/cpp/: CMakeLists.txt  client_queue.cpp  main.cpp
iot/java/: README.md  pom.xml
iot/python/: client.py  rootCA.crt
jenkins-packer/: Jenkinsfile
jenkins-packer/packer/: base.json  django.json  nginx.json
jenkins-packer/terraform/: .gitignore  main.tf  network.tf  output.tf  terraform.tfvars_example  variables.tf
kms/quickstart/: README.md  kms-client.sh  kms-decrypt.sh  kms-encrypt.sh
message-queue/terraform/: example.tf
packer-ansible-windows/: readme.md  windows-ansible.json
packer-ansible-windows/ansible/: exmb_prereq.yml
packer-ansible-windows/setup_complete/: SetupComplete.cmd  SetupComplete.ps1
products-prepare/linux/: yc-image-cleanup.sh
serverless/cicd-django/: .gitignore  (+3 more)
speechsense/: metadata_example.json  readme.md  upload_grpc.py  upload_grpc_streaming.py
terraform-container-optimized-image-example/: .gitignore  README.md
terraform-ydb-state/: README.md  main.tf
(+1628 files in other folders)
